chore: register discord bot modules and update project config
- pyproject.toml: add [discord] optional dep group (py-cord[voice], PyNaCl)
- MANIFEST.md: register VoiceActivityDetector, VoicePipeline, VoiceBot, create_bot
- CLAUDE.md: document discord bot module, architecture, commands, env vars
- .env.example: add OPENCLAW_VOICE_DISCORD_TOKEN, GUILD_ID, LLM_URL, LLM_MODEL

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,21 @@ OPENCLAW_VOICE_PROFILES_DIR=./speaker-profiles
 
 # Inference device for Resemblyzer ("cpu" or "cuda").
 OPENCLAW_VOICE_RESEMBLYZER_DEVICE=cpu
+
+# ---------------------------------------------------------------------------
+# Discord Voice Bot
+# ---------------------------------------------------------------------------
+
+# Discord bot token — obtain from https://discord.com/developers/applications
+# NEVER commit this value. Set in .env.local only.
+OPENCLAW_VOICE_DISCORD_TOKEN=
+
+# Guild (server) ID for slash command registration.
+# If unset, commands register globally (takes up to 1 hour to propagate).
+OPENCLAW_VOICE_GUILD_ID=
+
+# LLM OpenAI-compatible endpoint for the voice pipeline.
+OPENCLAW_VOICE_LLM_URL=http://localhost:8000/v1/chat/completions
+
+# LLM model name to use.
+OPENCLAW_VOICE_LLM_MODEL=Qwen/Qwen2.5-32B-Instruct
