--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,10 @@ dependencies = [
 speaker-id = [
     "resemblyzer>=0.1.3",
 ]
+discord = [
+    "py-cord[voice]>=2.6",
+    "PyNaCl>=1.5",
+]
 dev = [
     "pytest>=7.4",
     "pytest-asyncio>=0.21",
@@ -48,7 +52,7 @@ dev = [
     "respx>=0.20",
 ]
 all = [
-    "openclaw-voice[speaker-id,dev]",
+    "openclaw-voice[speaker-id,discord,dev]",
 ]
 
 [project.scripts]
