feat: add post-STT word corrections and audio pre-buffer
1. Word Correction Dictionary:
   - Load corrections from TOML file ([corrections] section)
   - Case-insensitive, word-boundary-aware regex replacement
   - Configurable via PipelineConfig.corrections_file
   - Applied immediately after Whisper transcription in run_stt()
   - corrections.example.toml with common examples

2. Audio Pre-Buffer for Clipped Speech:
   - Rolling per-user deque of resampled PCM chunks in VoiceSink
   - Prepends buffered frames when speech starts (first write() after silence)
   - Configurable via pre_buffer_ms param (default 300ms = ~15 frames)
   - Captures lead-in audio that Discord may clip

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ htmlcov/
 config.local.toml
 *.local.toml
 
+# Word corrections (user-specific)
+corrections.toml
+
 # Speaker profiles (user data, not committed)
 profiles/
 speaker-profiles/
