fix(tests): update test_voice_pipeline for v2 stateless API; add python-multipart dev dep
- Rewrote TestFullPipeline, TestConversationHistory, TestVoicePipelineInit
  to match v2 VoicePipeline (stateless: no history/process_utterance/clear_history)
- Added TestRunStt, TestCallLlmWithTools, TestSynthesizeResponse for v2 API
- Updated default llm_model assertion: Qwen2.5-32B → Qwen3-30B-A3B-Instruct-2507
- Added python-multipart>=0.0.9 to [dev] extras (required by test_speaker_id.py)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "mypy>=1.5",
     "respx>=0.20",
     "setuptools",
+    "python-multipart>=0.0.9",
 ]
 all = [
     "openclaw-voice[speaker-id,discord,dev]",
