feat: local channel message cache, updated README, schema fix
- Replace per-LLM-call Discord API history fetch with local deque cache
- Seed cache once on /join and auto-reconnect, maintain via on_message events
- Cache only active for guilds where bot is in voice (cleaned on /leave)
- Remove required fields from plugin schema (install-then-configure workflow)
- Rename npm package to @epiphytic/discord-voice (fix id mismatch warning)
- Rewrite README with full feature docs, config reference, install paths
- Expand whisper_prompt with memory-mined vocabulary hints

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epiphytic/openclaw-discord-voice",
+  "name": "@epiphytic/discord-voice",
   "version": "1.0.2",
   "description": "OpenClaw plugin for real-time Discord voice assistant with local LLM, STT, and TTS",
   "type": "module",
