--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@epiphytic/discord-voice",
+  "name": "@epiphytic/openclaw-discord-voice",
   "version": "1.2.0",
   "description": "OpenClaw plugin for real-time Discord voice assistant with local LLM, STT, and TTS",
   "type": "module",
